--- a/n8.4.vcxproj
+++ b/n8.4.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClCompile Include="list.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="turn.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="list.h" />
